--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
 #contactinfo {
     
     font-family: "Noto Sans", sans-serif;
+    font-weight: 235 ;
 }
 #logo{
     align-content: center;
