--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
     
     font-family: "Noto Sans", sans-serif;
     font-weight:410 ;
+    font-size:20px ;
 }
 #logo{
     align-content: center;
